# furl-cli

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/furl_cli/: Cargo.toml
crates/furl_cli/src/: engine.rs  lib.rs  main.rs
crates/furl_cli/src/features/: cli.rs  mod.rs  progress.rs
docs/: README.md
docs/adr/: 0001-optional-progress-reporting.md  0002-using-workspace-for-examples-and-other-crates.md  README.md
examples/embedded-minimal/: Cargo.toml
examples/embedded-minimal/src/: main.rs
examples/no-indicator/: Cargo.toml
examples/no-indicator/src/: main.rs
src/: engine.rs  lib.rs  main.rs
