[package]
name = "furl-cli"
description = "A fast, multithreaded CLI downloader built in Rust."
version = "0.6.2"
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
authors = ["Sudip Ghimire"]
homepage = "https://github.com/ghimiresdp/furl-cli"
repository = "https://github.com/ghimiresdp/furl-cli"
keywords = ["downloader", "cli", "multithreaded", "http"]
categories = ["command-line-utilities", "network-programming"]


exclude = ["target/", "Cargo.lock", ".github/"]

[lib]
name = "furl_core"
path = "src/lib.rs"


[[bin]]
name = "furl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.3"
regex = "1.12.2"
reqwest = { version = "0.12.26", features = ["json", "stream"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
